# starburst_api_python

./: .buildinfo  README.md  client_starburst.html  data_product.html  dataset_column.html  dataset_materialized_view.html  dataset_view.html  definition_properties.html  domain_info.html  genindex.html  index.html  introduction.html  objects.inv  owner.html  relevant_link.html  search.html  searchindex.js  setup.cfg  setup.py  starburst_connection.html  tag.html
.doctrees/: client_starburst.doctree  data_product.doctree  dataset_column.doctree  dataset_materialized_view.doctree  dataset_view.doctree  definition_properties.doctree  domain_info.doctree  environment.pickle  index.doctree  introduction.doctree  owner.doctree  relevant_link.doctree  starburst_connection.doctree  tag.doctree
.github/workflows/: docs.yml
_sources/: client_starburst.rst.txt  data_product.rst.txt  domain_info.rst.txt  index.rst.txt  introduction.rst.txt  relevant_link.rst.txt  starburst_connection.rst.txt  tag.rst.txt
classes/: class_dataset_materialized_view.py  class_definition_properties.py  class_relevant_link.py  class_starburst.py  class_starburst_connection_info.py  class_starburst_domain_info.py
docs/source/: conf.py  index.rst
docs_source/source/: client_starburst.rst  conf.py  data_product.rst  dataset_column.rst  dataset_materialized_view.rst  dataset_view.rst  definition_properties.rst  domain_info.rst  index.rst  introduction.rst  owner.rst  relevant_link.rst  starburst_connection.rst  tag.rst
helpers/: variables.py
starburst_api/classes/: class_data_product.py  (+10 more)
(+2 files in other folders)
