[metadata]
name = starburst-python-wrapper
version = 0.1.0
author = Gougou Nelson
author_email = nelson.gougou@orange.com
description = Package to create data product on starburst
long_description = file: README.md

[options]
packages = find:
install_requires =
    pandas
    trino==0.*
    sqlalchemy==1.4.*
    sqlalchemy-trino==0.5.*